syntax = "proto3";

package workspace.v1;
option go_package = "dev-tools-services/gen/workspace/v1;workspacev1";


service WorkspaceService {
  rpc GetWorkspaces(GetWorkspacesRequest) returns (GetWorkspacesResponse);
  rpc GetWorkspace(GetWorkspaceRequest) returns (GetWorkspaceResponse);
  rpc CreateWorkspace(CreateWorkspaceRequest) returns (CreateWorkspaceResponse);
  rpc UpdateWorkspace(UpdateWorkspaceRequest) returns (UpdateWorkspaceResponse);
  rpc DeleteWorkspace(DeleteWorkspaceRequest) returns (DeleteWorkspaceResponse);
  rpc InviteUser(InviteUserRequest) returns (InviteUserResponse);
}

message Workspace {
  string id = 1;
  string name = 2;
}

message GetWorkspacesRequest {
}

message GetWorkspacesResponse {
  repeated Workspace workspaces = 1;
}

message GetWorkspaceRequest {
  string id = 1;
}

message GetWorkspaceResponse {
   Workspace workspace = 1;
}

message CreateWorkspaceRequest {
  string name = 1;
}

message CreateWorkspaceResponse {
  Workspace workspace = 1;
}

message UpdateWorkspaceRequest {
  string id = 1;
  string name = 2;
}

message UpdateWorkspaceResponse {
}

message DeleteWorkspaceRequest {
  string id = 1;
}

message DeleteWorkspaceResponse {
}

message InviteUserRequest {
  string workspace_id = 1;
  string email = 2;
}

message InviteUserResponse {
}
